Extensive Additions to the Test Suite, and Several Bug Fixes. Also simplified the URLUtil.URLParameterValueCallback API - some of them could just be Consumer<String>. Also added many @Nonnull and @Nullable annotations and some @CanIgnoreReturnValue annotations, but there are probably many more that are needed.